# novarover

./: .gitignore  README.md
docs/: DRIFT_TEST.md  GAZEBO_OBSTACLE_TEST.md  GAZEBO_SETUP.md  GAZEBO_SIM_CHECKLIST.md  GIT_PUSH_SETUP.md  MOCK_MODE_SECTIONS_TO_ADD.md  PHYSICAL_ROBOT_READINESS_AUDIT.md  ROBOT_GEOMETRY_FOR_SIM.md  ROS_Mower_AI_CODER_SPEC.md  ROS_Mower_GAZEBO_SIMULATION.md  ROS_Mower_README.md  ROS_Mower_SYSTEM_ARCHITECTURE.md  SENSOR_NOISE_TEST.md
scripts/: diagnose_sim.sh  git-credential-novarover.sh  test_heartbeat_timeout.sh
src/mower_base/: package.xml  setup.cfg  setup.py
src/mower_base/launch/: bringup.launch.py  bringup_safety_test.launch.py
src/mower_base/mower_base/: __init__.py  mock_base_interface_node.py  real_base_interface_node.py
src/mower_bringup/: CMakeLists.txt  package.xml
src/mower_bringup/launch/: bringup.launch.py  rviz_mission_alternating_obstacles.launch.py  rviz_mission_concave_trap.launch.py  rviz_mission_grazing_obstacle.launch.py  rviz_mission_large_obstacle.launch.py  rviz_mission_narrow_corridor_test.launch.py  rviz_mission_narrow_gap_not_passable.launch.py  rviz_mission_obstacle_near_start.launch.py  rviz_mission_obstacle_near_waypoint.launch.py  rviz_mission_random_obstacles.launch.py  rviz_mission_sensor_noise.launch.py  rviz_mission_test.launch.py
src/mower_description/: CMakeLists.txt  package.xml
src/mower_description/config/: bridge.yaml  rviz_mission_random_obstacles.rviz  rviz_mission_test.rviz
src/mower_description/launch/: gazebo.launch.py
src/mower_description/models/mower/: model.config  model.sdf
src/mower_description/scripts/: sim_helpers_node.py
src/mower_description/worlds/: mower_empty.sdf  mower_no_obstacle.sdf
src/mower_localization/: package.xml  setup.py
src/mower_localization/config/: README.md  ekf.yaml  ekf_gps.yaml  navsat_transform.yaml
src/mower_localization/mower_localization/: __init__.py  localization_node.py
src/mower_mission/: CMakeLists.txt  package.xml
src/mower_mission/config/: farm_origin.yaml  farm_origin_sim.yaml  mission_manager_geofence_overlay.yaml  mission_test.rviz
src/mower_mission/config/missions/: farm_triangle.wgs84  mp_test.waypoints  mp_test_converted.wgs84  mp_test_small.waypoints  mp_test_small_converted.wgs84  random_field_20m.waypoints  sample_australia.wgs84  sim_box_return.waypoints  sim_line_10m.waypoints  sim_line_12m.waypoints  sim_no_obstacle_8.waypoints  sim_obstacle_test.waypoints  sim_rect_8x3m.waypoints  sim_square_1m.waypoints  sim_square_5m.waypoints
src/mower_mission/include/mower_mission/: mission_loader.hpp
src/mower_mission/launch/: rviz_mission_test.launch.py
src/mower_mission/src/: mission_loader.cpp  mission_manager_node.cpp  qgc_mission_converter_node.cpp  waypoint_follower_node.cpp
src/mower_msgs/: CMakeLists.txt  package.xml
src/mower_msgs/msg/: EStop.msg  EngineCmd.msg  GpsStatus.msg  Heartbeat.msg  MissionState.msg  SafetyState.msg  SystemState.msg  UltrasonicArray.msg
src/mower_obstacles/: CMakeLists.txt  package.xml
src/mower_obstacles/src/: ultrasonic_guard_node.cpp
src/ros_mower_core/: CMakeLists.txt  package.xml
src/ros_mower_core/src/: heartbeat_node.cpp  safety_manager_node.cpp
