<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mower_base</name>
  <version>0.0.0</version>
  <description>Mower base interface (Arduino bridge)</description>
  <maintainer email="corye@todo.todo">corye</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mower_msgs</depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_mower_core</exec_depend>
  <exec_depend>mower_obstacles</exec_depend>
  <exec_depend>mower_mission</exec_depend>
  <exec_depend>mower_localization</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
