<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mower_obstacles</name>
  <version>0.0.0</version>
  <description>Ultrasonic guard and obstacle stop request</description>
  <maintainer email="corye@todo.todo">corye</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mower_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
